tests/NormalTests/paczka1/small_fuzzy/98876341.err
Error in line 5: S796 S559 43,8
Error in line 9: S796 S796 28,1
Error in line 11: S796 A887 99,4
Error in line 13: S796 A715 43,2
